# test-stt

./: main.py  pyproject.toml
backend/: audio_utils.py  config.py  main.py  model_manager.py  pyproject.toml  start.sh
backend/loaders/: __init__.py  base.py  hf_loader.py  nemo_loader.py  omni_loader.py  qwen_loader.py  vllm_loader.py
frontend/: index.html
