[project]
name = "test-stt"
version = "0.1.0"
description = "STT Evaluation Platform for Arabic models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "torch",
  "torchaudio",
  "transformers",
  "accelerate",
  "huggingface_hub",
  "soundfile",
  "numpy",
  "scipy",
  "datasets",
  "sentencepiece",
  "nemo_toolkit[asr]"
]
