[project]
name = "test-stt"
version = "0.1.0"
description = "STT Evaluation Platform for Arabic models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "huggingface-hub>=0.36.2",
    "nemo-toolkit[asr]>=2.7.3",
    "numpy>=1.26.4",
    "omnilingual-asr>=0.2.0",
    "python-multipart>=0.0.27",
    "qwen-asr>=0.0.6",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.11.0",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.46.0",
]
